--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -14,15 +14,11 @@
       </h1>
 
       <p>
-        Custom-made Sports Betting software solution with Odds Trading & Tools.
-        It is tailored to the specific market and preferences of the customer
-        and provides a complete Sportsbook Platform.
+        We offer a bespoke Sports Betting software solution that includes Odds Trading and Tools. This solution is meticulously tailored to meet the unique demands and preferences of our customers, providing a comprehensive Sportsbook Platform.
       </p>
 
       <p>
-        Our specialists will work alongside you, learning your needs and the
-        market requirements, and taking care of each step of the building up
-        process.
+        Our team of specialists will collaborate closely with you, gaining a deep understanding of your specific requirements and the market dynamics. We will guide you through every stage of the development process, ensuring a customized and reliable solution that aligns perfectly with your goals and the needs of your target market.
       </p>
 
       <h3>Try our B2B Betting software</h3>
@@ -64,34 +60,26 @@
     <div class="sportsbetting-mainfeature-col2">
       <h2>Sports Betting software <b> Main features</b></h2>
       <p>
-        The tools we put at your disposal to manage our betting software are
-        hundreds, here we list the most powerful and above all those necessary
-        to compete online in the international arena:
+        We offer an extensive array of tools to facilitate the management of our betting software. Among these, we highlight the most powerful and, notably, those crucial for competing on the global stage:
       </p>
 
       <ul class="bet_page_list">
         <li>
-          <strong> All popular worldwide sports,</strong> all leagues, and all
-          betting markets including <strong>150.000 pre-match </strong> and
-          <strong>75.000 in-play </strong> monthly.
+          <strong> Comprehensive Sports Coverage</strong> We provide coverage of all sports, leagues, and betting markets, offering a wide selection of options, including  <strong>150.000 pre-match </strong> and
+          <strong>75.000 in-play </strong>  opportunities every month.
         </li>
 
         <li>
-          <strong> Automated trading tools </strong> that give you control of
-          your own margins, suspensions, odds ladders and more.
+          <strong> Automated trading tools </strong> includes automated trading tools that empower you to manage various aspects such as profit margins, suspensions, odds ladders, and more, giving you greater control.
         </li>
 
         <li>
-          Odds service takes sports data API to a new level. With 100% accurate
-          pre-match and
-          <strong> fastest live data odds feeds </strong> at the lowest latency.
-        </li>
-
+          <strong> Advanced Odds Service</strong> redefines sports data APIs. It offers 100% accurate pre-match odds and the fastest live data odds feeds with minimal latency.</li>
         <!-- <li>
             <strong> Bonus Tools,</strong> Campaign builder and many Marketing
             tools
           </li> -->
-        <li>Can be <strong> integrated via API or iFrame </strong></li>
+        <li> <strong> Flexible Integration</strong>Our platform can be seamlessly integrated into your system via API or iFrame, offering versatility in implementation.</li>
       </ul>
     </div>
   </div>
@@ -110,32 +98,26 @@
         <strong>
           The advantage of running Online and Retail betting platform
         </strong>
-        starting an Online Betting platform can be tricky!
+        Starting an online betting platform can indeed be challenging. 
       </p>
 
       <p>
-        That is why we have created a
-        <strong> complete Sports betting software </strong>environment, with the
-        best Odds providers with the aim of offering you the widest coverage: 60
-        different sports, monthly events 150,000 pre-match, 75,000 in-play plus
-        real-time data for 2,000 include e-sports markets.
+        That's why we've designed a
+        <strong>comprehensive sports betting software </strong> environment to make the process smoother, complete with top-notch odds providers to offer you the broadest coverage, We encompass 60 different sports, with a monthly lineup of 150,000 pre-match events and 75,000 in-play events. Additionally, we provide real-time data for 2,000 e-sports markets.
       </p>
 
       <p>
-        Our regulated partners receive all the support they need to enter the
-        online Betting industry and are provided with Branded/ Non-Branded
-        versions of our platforms.
+        Our regulated partners receive full support for their entry into the online betting industry, along with the option of Branded or Non-Branded versions of our platforms.
       </p>
 
       <p>
-        With extensive risk management tools to enable a quick and easy set-up,
-        which is ready to grow as your business does.
+        Our software includes robust risk management tools, making it quick and straightforward to set up, and it's prepared to scale as your business expands.
       </p>
 
       <p>
-        The management of
-        <strong> online players and betting shops </strong> has never been so
-        simple!
+        Managing
+        <strong> online players and betting shops </strong> Managing online players and betting shops has never been this straightforward and user-friendly.
+
       </p>
     </div>
 
@@ -158,14 +140,12 @@
       <ul>
        
         <li>
-          <strong>Player Account Controls, </strong> Registration and
-          Verification, Fraudulent Accounts detections system
+          <strong>Player Account Controls </strong> Our platform provides robust player account management, including registration and verification services. We also have an effective system in place to detect and address fraudulent accounts.
         </li>
-        <li>Geolocation tools to extract IP address location information</li>
+        <li> <strong>Geolocation Tools </strong>We offer tools that can extract location information from IP addresses, ensuring accurate geolocation services.</li>
       </ul>
       <p>
-        Your sole focus will be on the setting up and creation of the retail
-        betting shops and online networks.
+        With our comprehensive support, your primary focus can be on establishing and developing your retail betting shops and online networks.
       </p>
     </div>
 
