--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -116,7 +116,7 @@
 
       <p>
         Managing
-        <strong> online players and betting shops </strong> Managing online players and betting shops has never been this straightforward and user-friendly.
+        <strong> online players and betting shops </strong> has never been this straightforward and user-friendly.
 
       </p>
     </div>
