--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -76,7 +76,7 @@
         
           
               </ul>
-              <img src="assets/sirplay-market_2022-1-768x369 copy.png" alt="map" />
+              <img src="assets/vrnl-market_2022-1-768x369 2.png" alt="map" />
         
             </div>
         <!-- <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=bangladesh&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://connectionsgame.org/">Connections NYT</a></div><style>.mapouter{position:relative;text-align:right;width:600px;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:600px;height:400px;}.gmap_iframe {width:600px!important;height:400px!important;}</style></div> -->
