--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -9,3 +9,304 @@
     height: 157px;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+.map {
+  margin-top: 3em;
+  position: relative;
+}
+
+.map__markers {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.map__marker {
+  position: absolute;
+}
+
+.map__marker:after {
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-name: pop;
+  border-radius: 50%;
+  border: 1px solid #A0C528;
+  content: "";
+  height: 2em;
+  left: 0;
+  margin: -0.5em 0 0 -0.5em;
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  width: 2em;
+}
+
+.map__marker:hover .map__marker-info {
+  display: block;
+}
+
+.map__marker > a {
+  background-color: #A0C528;
+  border-radius: 50%;
+  height: .6em;
+  display: block;
+  text-indent: -9999px;
+  width: .6em;
+}
+
+.map__marker--chicago {
+  left: 72%;
+  top: 39%;
+}
+
+.map__marker--florida {
+  left: 75%;
+  top: 39%;
+}
+
+.map__marker--florida:after {
+  animation-delay: 3s;
+}
+
+.map__marker--los-angeles {
+  left: 7%;
+  top: 60%;
+}
+
+.map__marker--los-angeles:after {
+  animation-delay: 5s;
+}
+
+.map__marker--new-york {
+  left: 91%;
+  top: 31%;
+}
+
+.map__marker--san-francisco {
+  left: 1%;
+  top: 46%;
+}
+
+.map__marker--san-francisco:after {
+  animation-delay: 3s;
+}
+
+.map__marker--seattle {
+  left: 8%;
+  top: 1%;
+}
+
+.map__marker--seattle:after {
+  animation-delay: 5s;
+}
+
+.map__marker-info {
+  display: none;
+  left: 50%;
+  position: absolute;
+  bottom: 0;
+  transform: translate(-50%, -2em);
+  width: 20em;
+  z-index: 999;
+}
+
+.map__marker-info-header {
+  background-color: #A0C528;
+  border-top-left-radius: 0.5em;
+  border-top-right-radius: 0.5em;
+  color: #fff;
+  padding: 0.5em 1em;
+}
+
+.map__marker-info-main {
+  background-color: #fff;
+  border-bottom-left-radius: 0.5em;
+  border-bottom-right-radius: 0.5em;
+  color: #7e7e7e;
+  padding: 0.5em 1em;
+}
+
+.map__marker-info h2 {
+  margin-bottom: 0;
+}
+
+.map__marker-info-inner {
+  border-radius: 0.5em;
+  box-shadow: 0 0 0.25em rgba(0, 0, 0, 0.3);
+  font-size: 0.875em;
+}
+
+.map__marker-info-inner:after {
+  border-left: 0.75em solid transparent;
+  border-right: 0.75em solid transparent;
+  border-top: 1em solid #fff;
+  content: "";
+  height: 0;
+  left: 50%;
+  position: absolute;
+  top: 100%;
+  transform: translateX(-50%);
+  width: 0;
+}
+
+.animate {
+  animation-duration: 1s;
+  animation-fill-mode: both;
+}
+
+@keyframes bounce-in {
+  0%, 20%, 40%, 60%, 80%, 100% {
+    transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  0% {
+    opacity: 0;
+    transform: scale3d(0.3, 0.3, 0.3);
+  }
+  20% {
+    transform: scale3d(1.1, 1.1, 1.1);
+  }
+  40% {
+    transform: scale3d(0.9, 0.9, 0.9);
+  }
+  60% {
+    opacity: 1;
+    transform: scale3d(1.03, 1.03, 1.03);
+  }
+  80% {
+    transform: scale3d(0.97, 0.97, 0.97);
+  }
+  100% {
+    opacity: 1;
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+.animate--bounce-in {
+  animation-duration: 0.75s;
+  animation-name: bounce-in;
+}
+.map__marker-info-inner p{
+
+  line-height: 27px;
+
+  font-size: 14px;
+}
+
+.loc{
+position: absolute;
+z-index: 999;
+top: -15px;
+left: -1px;
+font-size: 20px;
+color: #ec0e0e;
+line-height:60px;
+text-rendering: auto;
+-webkit-font-smoothing: antialiased;
+}
+
+.loc1{
+  font-size: 20px;
+color: #ec0e0e; 
+margin-top: -25px;
+margin-left: -2px;
+}
+
+
+.bounce {
+  position: absolute;
+  bottom: 30px;
+  left: 50% ;
+  /* width: 60px; */
+  /* height: 60px ; */
+  margin-left:-7px;
+  /* border: 2px solid #990000; */
+  -webkit-border-radius:50%;
+  -moz-border-radius:50%;
+  -ms-border-radius:50%;
+  border-radius:50%;
+  animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  -moz-animation: bounce 2s infinite;
+  -o-animation: bounce 2s infinite;
+}
+ 
+@-webkit-keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);}	
+  40% {-webkit-transform: translateY(-30px);}
+  60% {-webkit-transform: translateY(-15px);}
+}
+ 
+@-moz-keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {-moz-transform: translateY(0);}
+  40% {-moz-transform: translateY(-30px);}
+  60% {-moz-transform: translateY(-15px);}
+}
+ 
+@-o-keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {-o-transform: translateY(0);}
+  40% {-o-transform: translateY(-30px);}
+  60% {-o-transform: translateY(-15px);}
+}
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+  40% {transform: translateY(-30px);}
+  60% {transform: translateY(-15px);}
+}
+
+.bounce1{
+  position: absolute;
+  /* bottom: 30px; */
+  left: 50% ;
+  /* width: 60px; */
+  /* height: 60px ; */
+  margin-left:-4px;
+  /* border: 2px solid #990000; */
+  -webkit-border-radius:50%;
+  -moz-border-radius:50%;
+  -ms-border-radius:50%;
+  border-radius:50%;
+  animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  -moz-animation: bounce 2s infinite;
+  -o-animation: bounce 2s infinite;
+}
+
+
+@-webkit-keyframes bounce1 {
+  0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);}	
+  40% {-webkit-transform: translateY(-30px);}
+  60% {-webkit-transform: translateY(-15px);}
+}
+ 
+@-moz-keyframes bounce1 {
+  0%, 20%, 50%, 80%, 100% {-moz-transform: translateY(0);}
+  40% {-moz-transform: translateY(-30px);}
+  60% {-moz-transform: translateY(-15px);}
+}
+ 
+@-o-keyframes bounce1 {
+  0%, 20%, 50%, 80%, 100% {-o-transform: translateY(0);}
+  40% {-o-transform: translateY(-30px);}
+  60% {-o-transform: translateY(-15px);}
+}
+@keyframes bounce1 {
+  0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+  40% {transform: translateY(-30px);}
+  60% {transform: translateY(-15px);}
+}
+@media(max-width:768px){
+  .map__marker--florida {
+    left: 75%;
+    top: 35%;
+}
+}
