--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -17,20 +17,84 @@
   <section class="contact-section1-container">
     <div class="contact-section1-main">
         <h1>Online Gaming Provider</h1>
-        <div class="contact-section1-img">
-        <img src="assets/sirplay-market_2022-1-768x369.png" alt="">
-      </div>
+        <div class="contact-section1-img">  <div class="about_map">
+          <div class="map">
+  
+      
+            <ul class="map__markers">
+                  <li class="map__marker map__marker--chicago">
+  
+                    <a href="#">India</a>
+          
+                    <div class="map__marker-info">
+  
+                      <div class="map__marker-info-inner animate animate--bounce-in">
+                        <header class="map__marker-info-header">
+                          <h2 style="font-size: 1.5rem;">India</h2>
+                        </header>
+          
+                        <main class="map__marker-info-main">
+                          <p><a href="#">Lorem ipsum</a> dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, quae eos modi temporibus vitae nesciunt, quia voluptatem repellat recusandae!</p>
+                        </main>
+                      </div>
+          
+                    </div>
+                    <div class="bounce">
+  
+                    <i class="fa-solid fa-location-dot loc"></i>
+                    </div>
+                  </li>
+          
+                  <li class="map__marker map__marker--florida">
+                    <a href="#">Bangladesh</a>
+          
+                    <div class="map__marker-info">
+          
+                      <div class="map__marker-info-inner animate animate--bounce-in">
+                        <header class="map__marker-info-header">
+                          <h2 style="font-size: 1.5rem;">Bangladesh</h2>
+                        </header>
+          
+                        <main class="map__marker-info-main">
+                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid asperiores, quae eos modi temporibus vitae nesciunt, quia voluptatem repellat <a href="#">recusandae</a>!</p>
+                        </main>
+          
+                      </div>
+          
+                    </div>
+  
+                    <div class="bounce1">
+                    <i class="fa-solid fa-location-dot loc1"></i>
+                  </div>
+                  </li>
+          
+          
+                
+                 
+          
+            
+                </ul>
+                <img src="assets/vrnl-market_2022-1-768x369 2.png" alt="map" />
+          
+              </div>
+          <!-- <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=bangladesh&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://connectionsgame.org/">Connections NYT</a></div><style>.mapouter{position:relative;text-align:right;width:600px;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:600px;height:400px;}.gmap_iframe {width:600px!important;height:400px!important;}</style></div> -->
+        </div> </div>
     </div>
 
 
     <div class="contact-section1-para">
-    <p style="margin-bottom:20px ;"><strong>  Vrnl is a Sportsbook and Gaming Provider with 15 years of experience in the gambling industry. </strong> We have been supplying bookmakers, lotteries and betting organizations in regulated markets since 2005.
-    </p>
-    <p>&nbsp;</p>
+    <p style="margin-bottom:20px ;"> <strong style="color: #000;">
+      Vrnl is a well-established Sportsbook and Gaming Provider with a remarkable 10-year track record in the gambling industry.
+    </strong>
+    Since 2012, we have been dedicated to supplying bookmakers, lotteries, and betting organizations in regulated markets.
+  </p>
+  <p>&nbsp;</p>
 
-    <p style="margin-bottom:20px ;"><i>“We are creative strategists, nerds and communicators with a huge passion for online gaming and we work hard to build our customers’ success in the business.”
-    </i></p>
-    <p>&nbsp;</p>
+  <p style="margin-bottom: 20px">
+    <i style="color: #686868;font-size: 17px;"
+      >"We are a team of creative strategists, tech enthusiasts, and effective communicators, driven by an unwavering passion for the online gaming industry. Our relentless commitment is to foster the success of our clients in the business."
+    </i>
+  </p>
 
     
   </div>
