--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -215,7 +215,7 @@ Also available in the
   <div class="starting_row">
     <div class="start_details">
 
-      <h1 class="start_header">Before you embark, witness it in action!</h1>
+      <h1 class="start_header">Before you start, see it in action!</h1>
       <p class="start_para">Explore our demo platform:</p>
 
 
