--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -231,14 +231,7 @@ header {
 .nav_col_3 i {
   margin: 4px;
 }
-<<<<<<< HEAD
 
-=======
-/* .nav_col_3 .fa-brands:hover {
-  color: #a0c528;
-  cursor: pointer;
-} */
->>>>>>> cad44d09fddc2032771204070770fe1031660d94
 .responsive {
   display: none;
 }
@@ -497,5 +490,5 @@ color:#00acee
           background-clip: text;
   -webkit-text-fill-color: transparent;
   
-
+ /* change this to change the size*/
   }
