--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -376,7 +376,7 @@ Online player, register your game account online or at a shop, place bets.
                       </h2>
                       <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                          <ul _ngcontent-ien-c23="" style="font-family: 'Poppins'; font-size: 16px; text-align: start;"><li _ngcontent-ien-c23=""><strong _ngcontent-ien-c23="">Most popular:</strong> Counter-Strike: Global Offensive, Dota 2, League of Legends, Fortnite, Call of Duty. </li><li _ngcontent-ien-c23=""><strong _ngcontent-ien-c23="">Sports Games:</strong> FIFA, Madden NFL, NBA 2K, Pro Evolution Soccer, Rocket League. </li><li _ngcontent-ien-c23=""><strong _ngcontent-ien-c23="">Multiplayer Online like:</strong> Dota 2, League of Legends, Smite, Heroes of the Storm. </li><li _ngcontent-ien-c23=""><strong _ngcontent-ien-c23="">First-Person Shooter FPS: </strong>CS:GO, Call of Duty, Rainbow Six: Siege, Overwatch. </li><li _ngcontent-ien-c23=""><strong _ngcontent-ien-c23="">Fighting Games:</strong> Street Fighter, Super Smash Bros, Tekken. Real-Time Strategy RTS: StarCraft: Brood War, Warcraft III, StarCraft II. </li><li _ngcontent-ien-c23=""><strong _ngcontent-ien-c23="">Battle Royale:</strong> PUBG, Fortnite, Apex Legends. </li></ul>
+                          <ul  style="font-family: 'Poppins'; font-size: 16px; text-align: start;"><li ><strong >Most popular:</strong> Counter-Strike: Global Offensive, Dota 2, League of Legends, Fortnite, Call of Duty. </li><li ><strong >Sports Games:</strong> FIFA, Madden NFL, NBA 2K, Pro Evolution Soccer, Rocket League. </li><li ><strong >Multiplayer Online like:</strong> Dota 2, League of Legends, Smite, Heroes of the Storm. </li><li ><strong >First-Person Shooter FPS: </strong>CS:GO, Call of Duty, Rainbow Six: Siege, Overwatch. </li><li ><strong >Fighting Games:</strong> Street Fighter, Super Smash Bros, Tekken. Real-Time Strategy RTS: StarCraft: Brood War, Warcraft III, StarCraft II. </li><li ><strong >Battle Royale:</strong> PUBG, Fortnite, Apex Legends. </li></ul>
                         </div>
                       </div>
                     </div>
@@ -392,7 +392,7 @@ Online player, register your game account online or at a shop, place bets.
                           <p>
                             Yes, indeed our eSports betting platform network is based on 3 levels:
                           </p>
-                          <ol _ngcontent-ien-c23="" style="text-align: start; margin: 9px; font-size: 16px;"><li _ngcontent-ien-c23=""><strong _ngcontent-ien-c23="">Platform administrator</strong> - the access to the backend (it is also possible to create other accesses to the Back office with limited privileges and permissions). </li><li _ngcontent-ien-c23=""><strong _ngcontent-ien-c23="">Cashier</strong> the profile for the betting shops's employees, able to place bets without earning any commissions.</li><li _ngcontent-ien-c23=""><strong _ngcontent-ien-c23=""> Online player,</strong> register your game account online or at a shop, place bets. </li></ol>
+                          <ol  style="text-align: start; margin: 9px; font-size: 16px;"><li ><strong >Platform administrator</strong> - the access to the backend (it is also possible to create other accesses to the Back office with limited privileges and permissions). </li><li ><strong >Cashier</strong> the profile for the betting shops's employees, able to place bets without earning any commissions.</li><li ><strong > Online player,</strong> register your game account online or at a shop, place bets. </li></ol>
                         </div>
                       </div>
                     </div>
@@ -450,7 +450,7 @@ The proper management of a eSports betting platform can make this business highl
                       </h2>
                       <div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                          <p _ngcontent-ien-c23=""> Today we offer 20 live eSports markets. <br _ngcontent-ien-c23=""> But we are constantly adding new markets. </p>
+                          <p > Today we offer 20 live eSports markets. <br > But we are constantly adding new markets. </p>
                         </div>
                       </div>
                     </div>
@@ -659,7 +659,7 @@ The proper management of a eSports betting platform can make this business highl
                         <div class="accordion-body">
                           
 
-                            <ul _ngcontent-ien-c23="" style="font-family: 'Poppins'; font-size: 16px; text-align: start;"><li _ngcontent-ien-c23=""> Excellent affiliate marketing tools, and profitable referral system </li><li _ngcontent-ien-c23=""> Accessible social media platform, Mobile and Web Pop-up messages, and In-Application Informing </li><li _ngcontent-ien-c23=""> Strong Registration and Verification for Player Record Controls and detection algorithm for Fraudulent Accounts </li><li _ngcontent-ien-c23=""> Detection of instant IP address area data via geolocation tools </li></ul>
+                            <ul  style="font-family: 'Poppins'; font-size: 16px; text-align: start;"><li > Excellent affiliate marketing tools, and profitable referral system </li><li > Accessible social media platform, Mobile and Web Pop-up messages, and In-Application Informing </li><li > Strong Registration and Verification for Player Record Controls and detection algorithm for Fraudulent Accounts </li><li > Detection of instant IP address area data via geolocation tools </li></ul>
                          
                         </div>
                       </div>
@@ -674,8 +674,8 @@ The proper management of a eSports betting platform can make this business highl
                       </h2>
                       <div id="collapse27" class="accordion-collapse collapse" aria-labelledby="heading27" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                          <p _ngcontent-ien-c23=""> Indeed, there are 3 different levels on the sports betting software network that is accessible: </p>
-                          <ul _ngcontent-ien-c23="" style="font-family: 'Poppins'; font-size: 16px; text-align: start;"><li _ngcontent-ien-c23="" style="font-weight: bold;"> What are the affiliate systems on the Casino Software? </li><p _ngcontent-ien-c23="">This level is the admittance to the backend. Likewise, it makes different gets to the Administrative center with restricted honors and permissions is additionally conceivable. </p><li _ngcontent-ien-c23="" style="font-weight: bold;"> Cashier Level </li><p _ngcontent-ien-c23=""> This level suitably describes betting shops’ representatives, ready to engage bets without acquiring any commissions. </p><li _ngcontent-ien-c23="" style="font-weight: bold;"> Online player Level </li><p _ngcontent-ien-c23=""> This level denotes players who have an account by registering at the betting game online or at a shop, and also place bets. </p></ul>
+                          <p > Indeed, there are 3 different levels on the sports betting software network that is accessible: </p>
+                          <ul  style="font-family: 'Poppins'; font-size: 16px; text-align: start;"><li  style="font-weight: bold;"> What are the affiliate systems on the Casino Software? </li><p >This level is the admittance to the backend. Likewise, it makes different gets to the Administrative center with restricted honors and permissions is additionally conceivable. </p><li  style="font-weight: bold;"> Cashier Level </li><p > This level suitably describes betting shops’ representatives, ready to engage bets without acquiring any commissions. </p><li  style="font-weight: bold;"> Online player Level </li><p > This level denotes players who have an account by registering at the betting game online or at a shop, and also place bets. </p></ul>
                         </div>
                       </div>
                     </div>
