--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -512,7 +512,7 @@ The proper management of a eSports betting platform can make this business highl
 
 <!-- vrnl question for playstreaming start -->
 <section>
-  <div id="accordionExample" class="x-section e255-e74 m73-0 m73-3 m73-7 accordion">
+  <div id="accordionExampleStreaming" class="x-section e255-e74 m73-0 m73-3 m73-7 accordion">
     <div class="x-row x-container max width e255-e78 m73-9 m73-a m73-c m73-d m73-g m73-k m73-l m73-z">
       <div class="x-row-inner">
         <div class="x-col e255-e79 m73-10 m73-11 m73-12">
@@ -523,7 +523,7 @@ The proper management of a eSports betting platform can make this business highl
                 <h2>FAQs about streaming platform</h2>
                 <div role="tablist" class="wp-faq-schema-items ui-accordion ui-widget ui-helper-reset">
 
-                  <div class="accordion" id="accordionExample">
+                  <div class="accordion" id="accordionExampleStreaming">
 
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingt21">
@@ -531,15 +531,14 @@ The proper management of a eSports betting platform can make this business highl
                           How many football matches can I promote?
                         </button>
                       </h2>
-                      <div id="collapse21" class="accordion-collapse collapse" aria-labelledby="heading21" data-bs-parent="#accordionExample">
+                      <div id="collapse21" class="accordion-collapse collapse" aria-labelledby="heading21" data-bs-parent="#accordionExampleStreaming">
                         <div class="accordion-body">
                           <p>
-                            During the live from the dashboard it is possible to activate two matches at a time, but there is no limit to how many matches you can connect
+                            During the live from the dashboard, it is possible to activate two matches at a time, but there is no limit to how many matches you can connect.
                           </p>
                         </div>
                       </div>
                     </div>
-
 
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="heading22">
@@ -547,7 +546,7 @@ The proper management of a eSports betting platform can make this business highl
                           Can Casino events be broadcast live?
                         </button>
                       </h2>
-                      <div id="collapse22" class="accordion-collapse collapse" aria-labelledby="heading22" data-bs-parent="#accordionExample">
+                      <div id="collapse22" class="accordion-collapse collapse" aria-labelledby="heading22" data-bs-parent="#accordionExampleStreaming">
                         <div class="accordion-body">
                           <p>
                             Yes, it can broadcast all casino games live on all platforms that allow it.
@@ -556,28 +555,21 @@ The proper management of a eSports betting platform can make this business highl
                       </div>
                     </div>
 
-                    <div class="accordion-item">
+                    <div clas="accordion-item">
                       <h2 class="accordion-header" id="heading23">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse23" aria-expanded="false" aria-controls="collapse23">
                           How do I measure the success of live streams?
-
                         </button>
                       </h2>
-                      <div id="collapse23" class="accordion-collapse collapse" aria-labelledby="heading23" data-bs-parent="#accordionExample">
+                      <div id="collapse23" class="accordion-collapse collapse" aria-labelledby="heading23" data-bs-parent="#accordionExampleStreaming">
                         <div class="accordion-body">
                           <p>
-                            Of course you keep track of detailed analytics for multiple platforms on one screen.
-
-
+                            Of course, you keep track of detailed analytics for multiple platforms on one screen.
                           </p>
                         </div>
                       </div>
                     </div>
-
-
                   </div>
-
-
                 </div>
               </div>
               <p></p>
@@ -585,11 +577,6 @@ The proper management of a eSports betting platform can make this business highl
           </div>
           <div class="x-text x-text-headline e255-e82 m73-1g m73-1j">
             <div class="x-text-content">
-              <!-- <div class="x-text-content-text">
-                  <h3 class="x-text-content-text-primary">
-                    <strong>Other questions?</strong>
-                  </h3>
-                </div> -->
             </div>
           </div>
         </div>
@@ -597,6 +584,7 @@ The proper management of a eSports betting platform can make this business highl
     </div>
   </div>
 </section>
+
 <!-- vrnl question for playstreaming end -->
 
 
@@ -615,7 +603,7 @@ The proper management of a eSports betting platform can make this business highl
                 <h2>FAQs about Live Casino</h2>
                 <div role="tablist" class="wp-faq-schema-items ui-accordion ui-widget ui-helper-reset">
 
-                  <div class="accordion" id="accordionExample">
+                  <div class="accordion" id="accordionExample1">
 
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingt24">
@@ -623,15 +611,14 @@ The proper management of a eSports betting platform can make this business highl
                           What is a turnkey casino software?
                         </button>
                       </h2>
-                      <div id="collapse24" class="accordion-collapse collapse" aria-labelledby="heading24" data-bs-parent="#accordionExample">
+                      <div id="collapse24" class="accordion-collapse collapse" aria-labelledby="heading24" data-bs-parent="#accordionExample1">
                         <div class="accordion-body">
                           <p>
-                            A turnkey casino software is a solution ready to go live and your players will have the chance to play as in real casino. Your players will never get bored with more than 150 providers and different games such as live casino, lottery, virtual games and many other.
+                            A turnkey casino software is a solution ready to go live, and your players will have the chance to play as in a real casino. Your players will never get bored with more than 150 providers and different games such as live casino, lottery, virtual games, and many others.
                           </p>
                         </div>
                       </div>
                     </div>
-
 
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="heading25">
@@ -639,47 +626,14 @@ The proper management of a eSports betting platform can make this business highl
                           What is a casino white label casino software?
                         </button>
                       </h2>
-                      <div id="collapse25" class="accordion-collapse collapse" aria-labelledby="heading25" data-bs-parent="#accordionExample">
+                      <div id="collapse25" class="accordion-collapse collapse" aria-labelledby="heading25" data-bs-parent="#accordionExample1">
                         <div class="accordion-body">
                           <p>
-                            A casino software white label solution is the perfect solution for the operators who want to work with online casinos. Thanks to its experience, vrnl casino white label, will offer certified and secure casino games. vrnl Casino white label allows you to customize the casino based on your favourite language and currency.
+                            A casino software white label solution is the perfect solution for operators who want to work with online casinos. Thanks to its experience, vrnl casino white label will offer certified and secure casino games. vrnl Casino white label allows you to customize the casino based on your favorite language and currency.
                           </p>
                         </div>
                       </div>
                     </div>
-
-                    <div class="accordion-item">
-                      <h2 class="accordion-header" id="heading26">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse26" aria-expanded="false" aria-controls="collapse26">
-                          What do we offer as casino software provider?
-
-                        </button>
-                      </h2>
-                      <div id="collapse26" class="accordion-collapse collapse" aria-labelledby="heading26" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                          
-
-                            <ul _ngcontent-ien-c23="" style="font-family: 'Poppins'; font-size: 16px; text-align: start;"><li _ngcontent-ien-c23=""> Excellent affiliate marketing tools, and profitable referral system </li><li _ngcontent-ien-c23=""> Accessible social media platform, Mobile and Web Pop-up messages, and In-Application Informing </li><li _ngcontent-ien-c23=""> Strong Registration and Verification for Player Record Controls and detection algorithm for Fraudulent Accounts </li><li _ngcontent-ien-c23=""> Detection of instant IP address area data via geolocation tools </li></ul>
-                         
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="accordion-item">
-                      <h2 class="accordion-header" id="heading27">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse27" aria-expanded="false" aria-controls="collapse27">
-                          What are the affiliate systems on the Casino Software?
-
-                        </button>
-                      </h2>
-                      <div id="collapse27" class="accordion-collapse collapse" aria-labelledby="heading27" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                          <p _ngcontent-ien-c23=""> Indeed, there are 3 different levels on the sports betting software network that is accessible: </p>
-                          <ul _ngcontent-ien-c23="" style="font-family: 'Poppins'; font-size: 16px; text-align: start;"><li _ngcontent-ien-c23="" style="font-weight: bold;"> What are the affiliate systems on the Casino Software? </li><p _ngcontent-ien-c23="">This level is the admittance to the backend. Likewise, it makes different gets to the Administrative center with restricted honors and permissions is additionally conceivable. </p><li _ngcontent-ien-c23="" style="font-weight: bold;"> Cashier Level </li><p _ngcontent-ien-c23=""> This level suitably describes betting shops’ representatives, ready to engage bets without acquiring any commissions. </p><li _ngcontent-ien-c23="" style="font-weight: bold;"> Online player Level </li><p _ngcontent-ien-c23=""> This level denotes players who have an account by registering at the betting game online or at a shop, and also place bets. </p></ul>
-                        </div>
-                      </div>
-                    </div>
-
 
                   </div>
                 </div>
@@ -689,7 +643,6 @@ The proper management of a eSports betting platform can make this business highl
           </div>
           <div class="x-text x-text-headline e255-e82 m73-1g m73-1j">
             <div class="x-text-content">
-
             </div>
           </div>
         </div>
@@ -697,4 +650,5 @@ The proper management of a eSports betting platform can make this business highl
     </div>
   </div>
 </section>
+
 <!-- vrnl question for playstreaming end -->
