--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -366,7 +366,7 @@ Online player, register your game account online or at a shop, place bets.
                 <h2>FAQs about eSports betting software</h2>
           
                 <div role="tablist" class="wp-faq-schema-items ui-accordion ui-widget ui-helper-reset">
-                  <div class="accordion" id="accordionExample">
+                  <div class="accordion" id="accordionesport">
 
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="heading1">
@@ -374,7 +374,7 @@ Online player, register your game account online or at a shop, place bets.
                           What eSports titles do you offer ?
                         </button>
                       </h2>
-                      <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1" data-bs-parent="#accordionExample">
+                      <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1" data-bs-parent="#accordionesport">
                         <div class="accordion-body">
                           <ul  style="font-family: 'Poppins'; font-size: 16px; text-align: start;"><li ><strong >Most popular:</strong> Counter-Strike: Global Offensive, Dota 2, League of Legends, Fortnite, Call of Duty. </li><li ><strong >Sports Games:</strong> FIFA, Madden NFL, NBA 2K, Pro Evolution Soccer, Rocket League. </li><li ><strong >Multiplayer Online like:</strong> Dota 2, League of Legends, Smite, Heroes of the Storm. </li><li ><strong >First-Person Shooter FPS: </strong>CS:GO, Call of Duty, Rainbow Six: Siege, Overwatch. </li><li ><strong >Fighting Games:</strong> Street Fighter, Super Smash Bros, Tekken. Real-Time Strategy RTS: StarCraft: Brood War, Warcraft III, StarCraft II. </li><li ><strong >Battle Royale:</strong> PUBG, Fortnite, Apex Legends. </li></ul>
                         </div>
@@ -387,7 +387,7 @@ Online player, register your game account online or at a shop, place bets.
                           Do you have the Mobile version?
                         </button>
                       </h2>
-                      <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#accordionExample">
+                      <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#accordionesport">
                         <div class="accordion-body">
                           <p>
                             Yes, indeed our eSports betting platform network is based on 3 levels:
@@ -403,7 +403,7 @@ Online player, register your game account online or at a shop, place bets.
                           Can I run a eSports betting platform without dealing with the odds and trading management?
                         </button>
                       </h2>
-                      <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3" data-bs-parent="#accordionExample">
+                      <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3" data-bs-parent="#accordionesport">
                         <div class="accordion-body">
                           <p>
                             Our eSports betting solutions come with the odds feed included. The software embeds many features and tools to manage the odds margins and configurations in complete autonomy. If you want to focus on the shops and players management only, we provide trading services and support.
@@ -417,7 +417,7 @@ Online player, register your game account online or at a shop, place bets.
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
                           I would like to have a fully eSports customized solution, is it possible?                        </button>
                       </h2>
-                      <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#accordionExample">
+                      <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#accordionesport">
                         <div class="accordion-body">
                           <p>
                             vrnl makes available a team of experts for the setting up of a fully customized eSports betting platform. Indeed, an Account Manager will collect the requirements and coordinate the project with the other team members: the Project Manager, the Graphics Designer and the IT Manager.
@@ -431,7 +431,7 @@ Online player, register your game account online or at a shop, place bets.
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
                           I am completely new to this business, what shall I know?                        </button>
                       </h2>
-                      <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5" data-bs-parent="#accordionExample">
+                      <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5" data-bs-parent="#accordionesport">
                         <div class="accordion-body">
                           <p>
                             
@@ -448,7 +448,7 @@ The proper management of a eSports betting platform can make this business highl
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6">
                           How many number of eSports live markets?                       </button>
                       </h2>
-                      <div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6" data-bs-parent="#accordionExample">
+                      <div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6" data-bs-parent="#accordionesport">
                         <div class="accordion-body">
                           <p > Today we offer 20 live eSports markets. <br > But we are constantly adding new markets. </p>
                         </div>
@@ -461,7 +461,7 @@ The proper management of a eSports betting platform can make this business highl
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapse7">
                           Can I use my eSports logo and brand colors?                        </button>
                       </h2>
-                      <div id="collapse7" class="accordion-collapse collapse" aria-labelledby="heading7" data-bs-parent="#accordionExample">
+                      <div id="collapse7" class="accordion-collapse collapse" aria-labelledby="heading7" data-bs-parent="#accordionesport">
                         <div class="accordion-body">
                           <p>
                             Yes you can. We provide different solutions based on your specific requirements. Indeed, we can create bespoke eSports solutions collecting your requests and setting up a project for you or we can provide a turnkey solution, modifying your eSports brand colors and logo only.
@@ -475,7 +475,7 @@ The proper management of a eSports betting platform can make this business highl
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse8" aria-expanded="false" aria-controls="collapse8">
                           Can I host the eSport sportsbook on my server infrastructure?                      </button>
                       </h2>
-                      <div id="collapse8" class="accordion-collapse collapse" aria-labelledby="heading8" data-bs-parent="#accordionExample">
+                      <div id="collapse8" class="accordion-collapse collapse" aria-labelledby="heading8" data-bs-parent="#accordionesport">
                         <div class="accordion-body">
                           <p>
                             No, you can't. The hosting is a service included in our offering as, in order to guarantee the proper performance of the eSports betting software, our SysAdmins have set up a dedicated cluster structure inclusive of backups and disaster recovery plan. This will guarantee the compliance with the global regulations and the achievement of the highest security standards.
@@ -506,9 +506,6 @@ The proper management of a eSports betting platform can make this business highl
   </div>
 </section>
 <!-- vrnl question for esport end -->
-
-
-
 
 <!-- vrnl question for playstreaming start -->
 <section>
