--- a/src/styles.css
+++ b/src/styles.css
@@ -251,6 +251,9 @@ font-weight: 600;
 .you_img{
     display: none;
 }
+.faq_col{
+    width: 84% !important;
+}
   }
   
 /*=========== <platform section >=========== */
@@ -1709,10 +1712,7 @@ padding: 15px;
 
 /* ====================<betting page css section end here >====================  */
 
-*{
-    margin: 0px;
-    padding:  0px;
-}
+
 /* .nav_row{
     display: flex;
     justify-content: space-around;
@@ -4209,202 +4209,6 @@ padding: 0px 0px 13px;
 
 
 
-/* 
-.contactform-containermain{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: gray;
-    height: 60em;
-} */
-
-/* .contactform-containermain::before{
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50%;
-    height: 100%;
-    background: rgb(53, 53, 53);
-} */
-
-/* .contact-container{
-    position: relative;
-    min-width: 1100px;
-    min-height: 550px;
-    display: flex;
-    z-index: 1000;
-
-} */
-/* 
-.contact-container .contactinfo{
-    position: absolute;
-    top: 39px;
-    width: 279px;
-    background: rgb(160,197,40);
-    z-index: 1;
-    padding: 40px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    justify-content: space-between;
-    box-shadow: 0 20px 25px rgba(0,0,0, 0.15);
-}
-
-.contact-container .contactinfo h2{
-    color: white;
-    font-size: 24px;
-    font-weight: 500;
-}
-
-.contact-container .contactinfo ul.contact-info-index2{
-    position: relative;
-    margin: 20px 0;
-}
-
-.contact-container .contactinfo ul.contact-info-index2 li{
-    position: relative;
-    list-style: none;
-    display: flex;
-    margin: 20px 0;
-    cursor: pointer;
-    align-items: flex-start;
-    font-size: 20px;
-    color: rgb(83,111,89);
-}
-
-.contact-container .contactinfo ul.contact-info-index2 li span:nth-child(1){
-    width: 30px;
-    min-width: 30px;
-
-}
-
-
-.contact-container .contactinfo ul.contact-info-index2 li span:nth-child(1) i{
-    max-width: 100%;
-}
-
-
-.contact-container .contactinfo ul.contact-info-index2 li span:nth-child(2){
-    color: white;
-    margin-left: 10px;
-    font-weight: 400;
-}
-
-
-.contact-container .contactinfo ul.social-index2{
-    position: relative;
-    display: flex;
-}
-
-.contact-container .contactinfo ul.social-index2 li{
-    list-style: none;
-    margin-right: 15px;
-}
-
-.contact-container .contactinfo ul.social-index2 li i{
-    text-decoration: none;
-    font-size: 30px;
-    color: rgb(83,111,89);
-    padding: 0px 13px;
-}
- */
-
-
-
-
-
-
-
-
-
-
-
-
-/* =============================================================  */
-
-
-/* 
-
-.footer-main{
-    display: flex;
-    margin-left: 655px;
-    margin: 38px;
-    margin-left: 183px;
-}
-
-
-.footer2{
-    background: #ffffff;
-    height: 55vh;
-    width: 98vw;
-    padding-top: 40px;
-    color: black;
-    text-align: center;
-    justify-content: center;
-}
-
-
-.foot-img{
-    padding: 52px 138px 30px 74px;
-}
-    
-    
-
-
-.footer2 p{
-    color: black;
-    font-size: 16px;
-    padding: 5px 19px 0px 14px;
-}
-.socials{
-    display: flex;
-    
-    text-align: center;
-    list-style: none;
-    justify-content: center;
-    margin: 1rem 0 3rem 0;
-    gap: 45px;
-}
-
-
-.social_icons{
- background: rgb(255, 255, 255);
- width: 50px;
- height: 50px;
- border-radius: 50px;
-}
-
-.social_icons:hover{
-    background: #2c3e50;
-}
-
-.social_icons i{
-    text-align: center;
-    justify-content: center;
-    padding-top: 17px;
-    font-size: 18px;
-   
-}
-
-
-.socials li i{
-    margin: 0 10px;
-    color: rgb(0, 0, 0);
-}
-
- .footertext p{
-    color: gray;
-    text-align: center;
-    
-    
-}
-
-.footertext .footertext2 {
-    text-align: center;
-}  */
-
-
 
 
 /* ==================================INDEX2 ENDS========================== */
@@ -6749,307 +6553,6 @@ line-height: 30px;
 
 
 
-
-/* 
-*{
-    margin: 0px;
-    padding:  0px;
-}
-.nav_row{
-    display: flex;
-    justify-content: space-around;
-    padding-top: 27px;
-
-}
-.nav_row_2 {
-    display: flex;
-}
-
-nav{
-    height: 96px;
-    background-color: #fff;
-    color: #000;
-    font-size: 18px;
-}
-.nav_row_2  a{
-    text-decoration: none;
-    list-style: none;
-    margin: 15px;
-    position: relative;
-    color: #000;
-    list-style: none;
-    margin-top: 1px
-}
-.nav_row_2 li{
-    list-style: none;
-   
-}
-a{
-    text-decoration: none;
-}
-.nav_row_2 li a{
-color: #000;
-padding-bottom: 21px;
-
-}
-.active,.nav_row_2 li:hover{
-}
-
-.nav_row_2 li:hover .sub_menu{
-  display: block;
-  position: absolute;
-  margin-top: 15px;
-  background-color: #a0c528;
-  width: 250px;
-
-
-}
-.sub_menu li a {
-  color: white;
-  margin-left: -5px;
-  font-size: 15px;
-}
-.nav_row_2 li:hover .sub_menu ul{
-  display: block;
-  margin: 10px;
-}
-.nav_row_2 li:hover .sub_menu ul li{
-  padding: 9px;
-}
-.sub_menu ul li{
-  color: white;
-  font-size: 15px;
-  margin-left: -5px;
-
-}
-
-.nav_row_2   a:after  {
-  content: "";
-  background-color: #a0c528;
-  height: 3px;
-  width: 0;
-  position: absolute;
-  left: 3px;
-  bottom: 9px;
-  transition: 0.3s;
-
-}
-.nav_row_2  a:hover:after{
-  width: 100%;
-  color: #a0c528;
-} 
-
-  .act:hover{
-  color: #a0c528;
-
-}
-.sub_menu  li a::before{
-  content: '';
-  background-color: #fff;
-  position: absolute;
-  top: 8px;
-  width: 10px;
-  height: 3px;
-  left: -2px;
-  opacity: 0;
-}
-
-.sub_menu  li a:hover::before{
-  transition: all .2s ease;
-  left: 10px;
-  opacity: 1;
-}
-.sub_menu  li a:hover{
-  position: relative;
-  padding-left: 30px !important;
-  -webkit-transition: all .2s ease;
-  -moz-transition: all .2s ease;
-  transition: all .2s ease;
-}
-
-.sub_menu  .list::before{
-  content: '';
-  background-color: #fff;
-  position: absolute;
-  top: 15px;
-  width: 10px;
-  height: 3px;
-  left: -2px;
-  opacity: 0;
-}
-
-.sub_menu  .list:hover::before{
-  transition: all .2s ease;
-  left: 10px;
-  opacity: 1;
-}
-.sub_menu  .list:hover{
-  position: relative;
-  padding-left: 30px !important;
-  -webkit-transition: all .2s ease;
-  -moz-transition: all .2s ease;
-  transition: all .2s ease;
-}
-
-.list{
-}
- .sub_menu_2{
-display: none;
-}
-.hover_me:hover .sub_menu_2{
-  display: block;
-  position: absolute;
-  left: 95%;
-    top: 0;
-    background: #a0c528;
-    width: 250px;
-}
-.sub_menu_3{
-  display: none;
-  } 
-  .hover_me:hover .sub_menu_3{
-    display: block;
-    position: absolute;
-    left: 95%;
-      top: 23%;
-      background: #a0c528;
-      width: 250px;
-  }
-
-  .sub_menu_4{
-    display: none;
-    } 
-    .hover_me:hover .sub_menu_4{
-      display: block;
-      position: absolute;
-      left: 95%;
-        top: 44%;
-        background: #a0c528;
-        width: 250px;
-    }
-    header {
-      
-      -webkit-transition: all 0.5s ease;
-      -moz-transition: position 10s;
-      -ms-transition: position 10s;
-      -o-transition: position 10s;
-      transition: all 0.5s ease;
-    }
-    
-
-@keyframes smoothScroll {
-	0% {
-		transform: translateY(-40px);
-	}
-	100% {
-		transform: translateY(0px);
-	}
-}
-
-.page-header {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  z-index: 1;
-}
-.page-header.is-sticky {
-  position: fixed;
-  animation: smoothScroll 1s forwards;
-
-}
-
-
-
-.sub_menu{
-  display: none;
-}
-
-.nav_col{
-    width: 13%;
-}
-.nav_col_2{
-    width: 63%;
-}
-.nav_col_3{
-  width: 13% !important;
-}
-.nav_col_3 i{
-  margin: 4px;
-}
-.nav_col_3 .fa-brands:hover{
-color: #a0c528;
-cursor: pointer;
-} */
-
-/*======== diksha css end here ============= */
-
-
-
-/* responsive nav bar and header */
-/* .responsive{
-    display: none;
-    } */
-    /* .normal_view{
-      display: block;
-      } */
-      /* .navigation{
-    background-color: #a0c528 !important;
-      }
-    
-    
-      .accordion-flush .accordion-item .accordion-button, .accordion-flush .accordion-item .accordion-button.collapsed {
-        border-radius: 0;
-        background-color: #a0c528 !important;
-        color: white;
-    }
-    .accordion-body {
-      padding: var(--bs-accordion-body-padding-y) var(--bs-accordion-body-padding-x);
-      background-color: #a0c528;
-      color: white;
-    }
-    
-    .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-      --bs-gutter-x: 0.5rem !important;
-      --bs-gutter-y: 0;
-      width: 100%;
-      padding-right: calc(var(--bs-gutter-x) * .5);
-      padding-left: calc(var(--bs-gutter-x) * .5);
-      margin-right: auto;
-      margin-left: auto;
-    }
-    .navbar-collapse {
-      flex-basis: 100%;
-      flex-grow: 1;
-      align-items: center;
-      margin-top: 12px !important;
-    }
-    
-    .accordion {
-      --bs-accordion-color: #212529;
-      --bs-accordion-bg: #fff;
-      --bs-accordion-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out,border-radius 0.15s ease;
-      --bs-accordion-border-color: var(--bs-border-color);
-      --bs-accordion-border-width: 1px;
-      --bs-accordion-border-radius: 0.375rem;
-      --bs-accordion-inner-border-radius: calc(0.375rem - 1px);
-      --bs-accordion-btn-padding-x: 1.25rem;
-      --bs-accordion-btn-padding-y: 1rem;
-      --bs-accordion-btn-color: #212529;
-      --bs-accordion-btn-bg: var(--bs-accordion-bg);
-      --bs-accordion-btn-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#fffff'%3e%3cpath fill-rule='white' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
-      --bs-accordion-btn-icon-width: 1.25rem;
-      --bs-accordion-btn-icon-transform: rotate(-180deg);
-      --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
-      --bs-accordion-btn-active-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%230c63e4'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
-      --bs-accordion-btn-focus-border-color: #86b7fe;
-      --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-      --bs-accordion-body-padding-x: 1.25rem;
-      --bs-accordion-body-padding-y: 1rem;
-      --bs-accordion-active-color: white;
-      --bs-accordion-active-bg: #e7f1ff;
-      /* background-color: white; 
-    }*/
     .accordion-button:focus {
       z-index: 3;
       border-color: var(--bs-accordion-btn-focus-border-color);
